# YorTrade

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: lint.yml
app/api/: __init__.py  admin.py  models.py
app/clients/common/: handler_factory.py  mailbox.py  sender_router.py  worker.py
app/clients/common/handlers/: achievements_handler.py  base.py  begin_game_handler.py  end_game_handler.py  game_settings_handler.py  join_game_handler.py  leaderboard_handler.py  leave_game_handler.py  load_server_data_handler.py  new_chat_handler.py  noop_handler.py  ping_handler.py  portfolio_handler.py  private_game_handler.py  start_game_handler.py  start_help_handler.py  trade_handler.py
app/clients/tg/: dto.py  handler_factory.py  handlers.py  mailbox.py  poller.py  sender.py  texts.py  worker.py
app/clients/tg/handlers/: base.py  new_chat_handler.py  ping_handler.py
app/clients/vk/: handler_factory.py  mailbox.py  poller.py  sender.py  worker.py
app/data/: models.py
app/game/: engine.py
app/market/: engine.py  event_engine.py  models.py  services.py  settings.py  tick_processor.py
app/store/cache/: accessor.py
app/store/data/: accessor.py
app/store/database/: accessor.py
app/store/database/migrations/: env.py
app/store/database/migrations/versions/: 0001_initial_schema.py  0002_sync_current_game_schema.py  0003_alter_games_chat_id_to_bigint.py  0004_games_chat_not_unique.py  0005_users_fsm_json.py  0006_drop_sectors.py  0007_user_term_game_platform.py  0008_split_users_by_platform.py  0009_api_auth_users_sessions.py  0010_user_achievement_stats.py  0011_market_runtime_postgres.py
app/store/fsm/: accessor.py  states.py
app/store/market/: accessor.py  runtime_accessor.py
app/store/queue/: accessor.py
app/store/users/: accessor.py
app/users/: models.py
app/utils/: achievements.py  charts.py  data_loader.py  events.py  game_setup.py  inside_info.py  live_updates.py  lobby.py  log_context.py  market.py  news.py  platform.py  private_ui.py  render.py  runtime.py  texts.py  trading.py
app/web/: application.py  config.py  logger.py  middleware_factory.py
app/web/middlewares/: base.py  callback_sanity_middleware.py  dedup_middleware.py  game_access_middleware.py  maintenance_middleware.py  rate_limit_middleware.py  user_middleware.py
data/: companies.json  companies_ru.json  data.json  event_templates.json  news.json  sectors.json  sectors_ru.json  texts.json
tests/: test_achievements_flow.py  test_achievements_handler.py  test_admin_auth.py  test_deterministic_market_engine.py  test_events_behavior.py  test_game_settings_handler.py  test_game_setup_and_lobby_settings.py  test_group_render_and_callbacks.py  test_live_updates.py  test_lobby_controls.py  test_public_api.py  test_start_help_handler.py  test_terminal_handler.py  test_terminal_selection.py  test_tg_sender_resilience.py  test_trading_context.py  test_vk_callback_stability.py  test_vk_poller_identity.py
