[project]
name = "birjabot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "aio-pika>=9.6.1",
    "aiohttp>=3.13.3",
    "asyncpg>=0.31.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "python-dotenv>=1.2.2",
    "redis>=7.3.0",
    "sqlalchemy>=2.0.48",
    "alembic>=1.13.1",
]
