[project]
name = "birjabot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "aio-pika>=9.6.1",
    "aiohttp>=3.13.3",
    "asyncpg>=0.31.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "python-dotenv>=1.2.2",
    "redis>=7.3.0",
    "sqlalchemy>=2.0.48",
    "alembic>=1.13.1",
    "pydantic-settings>=2.13.1",
    "apispec>=6.10.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
per-file-ignores = { "app/store/database/migrations/env.py" = ["E402"] }
